# emotion-recognition

./: .gitignore  .pre-commit-config.yaml  Justfile  README.en-US.md  README.md  _typos.toml  multimodal.py  pyproject.toml  releaserc.toml  text.py
.github/workflows/: build.yml  ci-static-checks.yml  codestyle.yml  readme-translation-sync.yml  static-check.yml  train-and-eval.yml
benchmark/: load_video.py
cli/: cli_recognize.py  cli_tool.py  inference.py  recognize.py  tool.py  training.py
configs/: A+V--F.toml  A+V--T.toml  A--F.toml  A--T.toml  MELD--T+A+V--EF.toml  MELD--T+A+V--ET.toml  MELD--T+A--EF.toml  MELD--T+A--ET.toml  MELD--T--EF.toml  MELD--T--ET.toml  PILOT--T+A+V--ET.toml  PILOT--T--EF.toml  PILOT--T--ET.toml  T+A+V--F.toml  T+A+V--T.toml  T+A--F.toml  T+A--T.toml  T+V--F.toml  T+V--T.toml  T--F.toml  T--T.toml  V--F.toml  V--T.toml  default.toml  dropout.toml  frozen.toml
configs/MoE/: T+A--F.toml  T+A--T.toml
configs/classifier/: 1xE.toml  4xE.toml  64xE.toml  8xE.toml
configs/dataset/: IEMOCAP--E.toml  MELD--E.toml  MELD--S.toml  PILOT--S.toml  SIMS--S.toml
configs/encoders/: A+V.toml  A.toml  T+A+V.toml  T+A.toml  T+V.toml  T.toml  V.toml
configs/encoders/pretrained/MELD--E/: T+A+V.toml  T+A.toml  T.toml  distill--T+A.toml
configs/fusion/: DF-0.1.toml  DF-1.0.toml  DF-2.0.toml  DF-iemocap.toml  DF-meld.toml  DFA-1.0.toml  DFA-2.0.toml  DFA-meld.toml  LMF.toml  cross-attention.toml  deep-vallina.toml  disentanglement-noattn.toml  disentanglement.toml  private.toml  self-attention.toml  shared-iemocap.toml  shared-meld.toml  shared.toml  vallina.toml
configs/fusion/MoE/: ConcatFusionMoE.toml  LMF.toml  MHMoE.toml
configs/fusion/kwargs/: attn.toml
configs/losses/: apcl.toml  cmcl.toml  contrastive.toml  frl-iemocap.toml  frl-meld.toml  proto-contrastive.toml  scl.toml  self-contrastive.toml  spcl.toml
configs/losses/classification/: focal.toml  weight.toml
docs/: structure.md
examples/: audio.py  multimodal.py  text.py  text_audio.py  text_bert.py  text_bert_sentiment.py  text_mpnet.py  text_roberta.py  text_roberta_sentiment.py  text_sentiment_mpnet.py
experiments/: ablation.toml  basic.md  basic.toml  config.toml  dependency-finetuning.md  disentanglement.toml  distill.md  distill.toml  fusion.toml  makd-ablation.toml  makd.toml  mdn-ablation.toml  mdn.toml  mix-finetuning.md  mix-finetuning.sh  mix-finetuning.toml  moe.toml  proposal.toml
experiments/baseline/: multimodal.toml  unimodal.toml
old_training/: text_bert_sentiment.py
recognize/: __init__.py  cache.py  cli.py  config.py  estimator.py  evaluate.py  preprocessor.py  trainer.py  typing.py  utils.py
recognize/dataset/: __init__.py  base.py  meld.py  pilot.py  preprocessor.py  sims.py  utils.py
recognize/model/: __init__.py  base.py  fusion.py  multimodal.py  text.py  unimodal.py  utils.py
recognize/module/: __init__.py  basic.py  fusion.py  loss.py  moe.py  utils.py
src/recognize/: cache.py  config.py  estimator.py  evaluate.py  preprocessor.py  trainer.py  typing.py  utils.py
src/recognize/dataset/: __init__.py  base.py  iemocap.py  meld.py  sims.py  utils.py
src/recognize/model/: __init__.py  backbone.py  base.py  inputs.py  multimodal.py  outputs.py  unimodal.py
src/recognize/module/: __init__.py  basic.py  fusion.py  loss.py  moe.py  router.py  utils.py
src/recognize_cli/: cli_recognize.py  cli_tool.py
tools/: prepare_matrix.py
training/: audio.py  multimodal.py  text_audio.py  text_audio_sentiment.py  text_bert.py  text_bert_sentiment.py  text_mpnet.py  text_roberta.py  text_roberta_sentiment.py  text_sentiment_mpnet.py  text_sims.py  training.py
