[project]
name = "emotion-recognition"
version = "0.1.0"
description = ""
authors = [{ name = "Zhan Rongrui", email = "2742392377@qq.com" }]
dependencies = [
    "transformers>=4.43.1",
    "numpy>=1.26.0",
    "torch==2.4.1; platform_system!='Windows'",
    "torch==2.4.1+cu121; platform_system=='Windows'",
    "peft>=0.8.2",
    "safetensors>=0.4.2",
    "soundfile>=0.12.1",
    "faster-whisper>=1.0.3",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "rich>=13.7.1",
    "pillow>=10.2.0",
    "typer>=0.12.4",
    "rtoml>=0.11.0",
    "pyyaml>=6.0.2",
    "bitsandbytes>=0.44.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
train = ["opencv-python>=4.0.0", "pandas>=2.0.0", "torch-pruning>=1.4.2"]

[project.urls]
Homepage = "https://github.com/zrr1999/emotion-recognition.git"
Repository = "https://github.com/zrr1999/emotion-recognition.git"

[project.scripts]
emotion-recognize = "recognize_cli.cli_recognize:app"
emotion-tool = "recognize_cli.cli_tool:app"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # Isort
    "I",
    # Pyupgrade
    "UP",
    # Flake8
    "B",
    "C4",
    "YTT",
    "TID",
    # "PTH",
    # Pygrep-hooks
    "PGH",
    # Ruff-specific rules
    "RUF",
]
ignore = ["F841", "PGH003", "UP038", "B008", "RUF001"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I002"]

[tool.ruff.lint.isort]
known-first-party = ["recognize"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-tidy-imports]
# banned-module-level-imports = ["torch", "transformers"]
banned-module-level-imports = ["transformers"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
includes = ["src", "tests"]
typeCheckingMode = "standard"
reportPrivateImportUsage = false

[tool.uv]
dev-dependencies = ["viztracer>=0.16.3", "pyright>=1.1.384", "ruff>=0.6.8"]
index-strategy = "unsafe-best-match"
extra-index-url = [
    "https://pypi.tuna.tsinghua.edu.cn/simple",
    "https://download.pytorch.org/whl/cu121",
]

[tool.uv.sources]
test-package = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.pdm.build]
package-dir = "src"
source-includes = ["tests", "README.md"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
